# demystify-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-plz.yml  test.yml
cute-sqlite-kv/: Cargo.toml
cute-sqlite-kv/src/: lib.rs
demystify/: CHANGELOG.md  Cargo.toml  README.md
demystify-lib/: Cargo.toml
demystify-lib/include/: base.css  base.js
demystify-lib/src/: lib.rs
demystify-lib/src/json/: mod.rs
demystify-lib/src/problem/: mod.rs  musdict.rs  parse.rs  planner.rs  solver.rs  util.rs
demystify-lib/src/problem/snapshots/: demystify_lib__problem__parse__tests__parse_essence_little.snap  demystify_lib__problem__parse__tests__parse_sudoku_little.snap  demystify_lib__problem__parse__tests__parse_sudoku_little_2.snap  demystify_lib__problem__parse__tests__pretty_print.snap  demystify_lib__problem__planner__tests__varlits_minesweeper_essence-2.snap  demystify_lib__problem__planner__tests__varlits_minesweeper_essence.snap  demystify_lib__problem__solver__tests__parse_essence-2.snap  demystify_lib__problem__solver__tests__parse_essence-3.snap  demystify_lib__problem__solver__tests__parse_essence-4.snap  demystify_lib__problem__solver__tests__parse_essence.snap  demystify_lib__problem__solver__tests__random_solution_little-2.snap  demystify_lib__problem__solver__tests__random_solution_little.snap  demystify_lib__problem__solver__tests__random_solution_wall-2.snap  demystify_lib__problem__solver__tests__random_solution_wall.snap
demystify-lib/src/problem/util/: exec.rs  json.rs  parsing.rs
demystify-lib/src/satcore/: mod.rs
demystify-lib/src/svg/: mod.rs
demystify-lib/src/web/: mod.rs  puzsvg.rs
demystify-lib/tst/: binairo.eprime  little-sudoku.eprime  little1.eprime  little1.param  minesweeper.eprime  minesweeperPrinted.param  minesweeperWall.param
demystify-web/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
demystify-web/examples/eprime/: miracle.eprime  star-battle.eprime  sudoku.eprime
demystify-web/examples/eprime/star-battle/: FATAtalkexample.param
demystify-web/examples/eprime/sudoku/: puzzlingexample.param
demystify-web/html/: Makefile  package-lock.json  package.json  puzzle.tsx  tsconfig.json
demystify-web/html/website/: index.html  puzzle.js  puzzle.js.map  puzzle.tsx  sudoku.json  upload.js
demystify-web/html/website/ext/: htmx.js
demystify-web/src/: main.rs  util.rs
demystify-web/src/wrap/: mod.rs
demystify/include/: base.css  base.js
demystify/src/: lib.rs  main.rs
demystify/src/json/: mod.rs
demystify/src/problem/: mod.rs  musdict.rs  parse.rs  planner.rs  solver.rs  util.rs
demystify/src/problem/snapshots/: demystify__problem__parse__tests__parse_essence_little.snap  demystify__problem__parse__tests__parse_sudoku_little.snap  demystify__problem__parse__tests__parse_sudoku_little_2.snap  demystify__problem__parse__tests__pretty_print.snap  demystify__problem__planner__tests__varlits_minesweeper_essence-2.snap  demystify__problem__planner__tests__varlits_minesweeper_essence.snap  demystify__problem__solver__tests__parse_essence-2.snap  demystify__problem__solver__tests__parse_essence-3.snap  demystify__problem__solver__tests__parse_essence-4.snap  demystify__problem__solver__tests__parse_essence.snap  demystify__problem__solver__tests__random_solution_little-2.snap  demystify__problem__solver__tests__random_solution_little.snap  demystify__problem__solver__tests__random_solution_wall-2.snap  demystify__problem__solver__tests__random_solution_wall.snap
demystify/src/problem/util/: exec.rs  parsing.rs  timer.rs
demystify/src/web/: mod.rs  puzsvg.rs
demystify/tst/: binairo-1.param  little-sudoku-2.eprime  little1.eprime  minesweeper.eprime
eprime/: binairo.eprime  futoshiki.eprime  garam.eprime  kakurasu.eprime  kakuro.eprime  killersudoku.eprime  loopy.essence  pasta.eprime  puzzle-description.md  skyscrapers.eprime  solitairebattleship.eprime  star-battle-1.param  star-battle.eprime  stitch.eprime  sudoku.eprime  tents-1.param  tents.eprime  thermometer.eprime  x-sums.eprime
eprime/binairo/: binairo-empty.eprime  diiscu.param
eprime/futoshiki/: nfutoshiki-1.param  nfutoshiki-2.param  nfutoshiki-3.param  wikipedia-example.param
eprime/garam/: template.param
eprime/garam/instances/: garam-adv-201120.param  garam-beg-201120.param  garam-confirmed-201120.param  garam-diff-201120.param  garam-easy-201120.param  garam-exp-201120.param  garam-fiend-201120.param  garam-master-201120.param  garam-medium-201120.param  garam-tut.param  garam-vdiff-201120.param
eprime/kakurasu/: kakurasu.param
eprime/kakuro/: kakuro-5-5.param
eprime/kakuro/solving_techniques/: conceptispuzzles.param
eprime/miracle/: original.param
eprime/skyscrapers/: skyscrapers-1.param  skyscrapers-2.param
eprime/star-battle/: FATAtalkexample.param  krazydad-tutorial.param  logicmastersindia-example.param  rohanrao-blogspot-example.param  star-battle-1.param  tectonic-grouping-of-rows-or-columns.param  tectonic-row-or-col-elimination.param
eprime/starbattle/: rohanrao-blogspot-example.param  tectonic-grouping-of-rows-or-columns.param  tectonic-row-or-col-elimination.param
eprime/stitch/: cupcake1.param  hard1.param  hard2.param
eprime/sudoku/: puzzlingexample.param
eprime/tents/: tectonic-1-2-3-4-5-6-7.param  tectonic-8.param  tectonic-9.param
eprime/thermometer/: thermometer-1.param
eprime/x-sums/: ctc-best-xsums.param
scripts/: copy-examples-to-web.sh  test-some.sh
src/: main.rs
(+37 files in other folders)
