[package]
name = "demystify-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
tracing-appender = "0.2"
tracing-core = "0.1"
structopt = "0.3"
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
itertools = "0.12"
serde = { version = "1.0", features=["rc", "derive"]}
serde_json = "1.0"
regex = "1.0"
tempfile = "3.10"
rustsat = { version = "0.4", path = "../../rustsat/rustsat" }
rustsat-glucose = { version = "0.2", path = "../../rustsat/glucose" }
test-log = "0.2"
tera = { version = "1.19", default-features = false }
rayon = "1.0"
thread_local = "1.1"