[package]
name = "demystify-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.45", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
axum_session = { version = "0.16" }
serde_json = "1"
serde = "1"
anyhow = "1"
tempfile = "3"
demystify-lib = { path = "../demystify-lib" }
uuid = "1"

rustsat = { version = "0.6", features=["ipasir-display"] }