[package]
name = "demystify-web"
version = "0.1.1"
edition = "2024"
description = "A web front end to demystify, a constraint solving tool for explaining puzzles"
license = "MPL-2.0"
repository = "https://github.com/stacs-cp/demystify"
homepage = "https://github.com/stacs-cp/demystify"
documentation = "https://docs.rs/demystify-web"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
lazy_static = "1.4.0"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.45", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
axum_session = { version = "0.16" }
serde_json = "1"
serde = "1"
anyhow = "1"
tempfile = "3"
demystify = { path = "../demystify", version = "0.1.1" }
uuid = "1"

rustsat = { version = "0.7", features=["ipasir-display"] }
