[package]
name = "demystify-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
demystify-lib = { path = "../demystify-lib" }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
tempfile = "3.10"