[package]
name = "demystify"
version = "0.1.2"
edition = "2024"
description = "A constraint solving tool for explaining puzzles"
license = "MPL-2.0"
repository = "https://github.com/stacs-cp/demystify-rs"
homepage = "https://github.com/stacs-cp/demystify-rs"
documentation = "https://docs.rs/demystify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
tracing-appender = "0.2"
tracing-core = "0.1"
structopt = "0.3"
anyhow = "1.0"
rand = "0.9"
rand_chacha = "0.9"
itertools = "0.14"
serde = { version = "1.0", features=["rc", "derive"]}
serde_json = "1.0"
regex = "1.0"
tempfile = "3.10"
rustsat = { version = "0.7", features=["ipasir-display"] }
rustsat-glucose = { version = "0.7" }
test-log = "0.2"
tera = { version = "1.19", default-features = false }
rayon = "1.0"
thread_local = "1.1"
svg = "0.18"
thiserror = "2"
which = "8"

[dev-dependencies]
insta = "1"

[lib]
name = "demystify"
path = "src/lib.rs"

[[bin]]
name = "demystify"
path = "src/bin/main.rs"

[[bin]]
name = "demystify-makesvg"
path = "src/bin/makesvg.rs"

[dependencies.clap]
version = "4.0"
features = ["derive"]
